[BUGFIX] Fix overflow setting

--- a/css/magnific-popup.css
+++ b/css/magnific-popup.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 100%;
   z-index: 1042;
-  overflow: hidden;
+  /* overflow: hidden; */
   position: fixed;
   background: #000;
   opacity: 0.8;
@@ -225,7 +225,7 @@ button::-moz-focus-inner {
 .mfp-iframe-scaler {
   width: 100%;
   height: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   padding-top: 56.25%; }
   .mfp-iframe-scaler iframe {
     position: absolute;
